z-index (drop hat fix)

--- a/components/AvatarEditor.css
+++ b/components/AvatarEditor.css
@@ -46,6 +46,7 @@
 
 .equipment-selection {
   /* margin-top: 20px; */
+  z-index: 4;
   height: 100%;
   display: flex;
   flex-direction: column;
